# inequality-simulator

./: .gitattributes  .gitignore  .readthedocs.yaml  CONTEXT.md  DataAnalysis.ipynb  Inequality-Original.ipynb  Inequality.ipynb  README.md  VizTest.ipynb  agent.py  app.py  backend.py  conf.py  custom_policies.py  grade_dashboard.md  index.md  inequality_output.csv  mcp_server.py  model.py  model_output.csv  overview.md  policyblocks.py  pyproject.toml  render.yaml  requirements.txt  run.py  test_api.html  test_render.py  user_logic.py  utilities.py
.ipynb_checkpoints/: DataAnalysis-checkpoint.ipynb  Inequality-Original-checkpoint.ipynb  Inequality-checkpoint.ipynb  agent-checkpoint.py  model-checkpoint.py  requirements-checkpoint.txt  run-checkpoint.py
.virtual_documents/: DataAnalysis.ipynb  Inequality.ipynb  Untitled.ipynb
MoggerHanger/: Beyond the Echo Chamber.slides.html  MoggerHanger.ipynb  MoggerHanger.slides.html
SLM/: ingest.py  query_model.py
SLM/chroma_db/: chroma.sqlite3
binder/: environment.yml  postBuild
blockly/: custom_block.js  custom_blocks.js  index.html  python_generator.js  user_blocks.js
chroma_db/: chroma.sqlite3
docs/: app.js  glb-debug.html  index.html  landing.html  scene.js
docs/assets/: ben.glb  brian.glb  celebrating.glb  idle.glb  james.glb  jody.glb  joe.glb  kate.glb  leonard.glb  louise.glb  megan.glb  remy.glb  sad_idle.glb  suzie.glb  walking.glb
explanatory/: capitalism.py  communism.py  econophysics.py  econophysics_explain.html  fascism.py
explanatory/static/assets/: Pouch.fbx  crystal-ball.fbx  person1-catching.fbx  person1-idea.fbx  person1-idle.fbx  person1-throwing.fbx  person2-catching.fbx  person2-idea.fbx  person2-idle.fbx  person2-throwing.fbx  person3-catching.fbx  person3-idle.fbx
explanatory/static/css/: style.css
explanatory/static/js/: capitalism_simulation.js  communism_simulation.js  fascism_simulation.js  simulation.js
explanatory/templates/: capitalism.html  communism.html  fascism.html  index.html
inequality_simulator/: Inequality.ipynb  __init__.py
py_cafe/: app.py  backend.py  model.py  requirements.txt  run.py  utilities.py
py_cafe/static/: app.js  index.html
